--- a/_includes/header_title.html
+++ b/_includes/header_title.html
@@ -9,8 +9,8 @@
 {% endif %}
 <link rel="shortcut icon" href="{{ site.favicon }}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="/public/css/bootstrap.css">
-<link rel="stylesheet" href="/public/css/font-awesome.css">
-<link rel="stylesheet" href="/public/js/prettify/prettify.css">
-<link rel="stylesheet" href="/public/css/base.css">
-<link href="/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/bootstrap.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/js/prettify/prettify.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/public/css/base.css">
+<link href="{{ site.baseurl }}/pages/atom.xml" rel="alternate" title="{{site.title}}" type="application/atom+xml">
