--- a/_includes/header_title.html
+++ b/_includes/header_title.html
@@ -7,7 +7,7 @@
 {% if page.description  %}
   <meta name="description " content="{{ page.description  }}">
 {% endif %}
-<link rel="shortcut icon" href="{{ site.favicon }}" />
+<link rel="shortcut icon" href="{{ site.baseurl }}/public/img/balloon.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="{{ site.baseurl }}/public/css/bootstrap.css">
 <link rel="stylesheet" href="{{ site.baseurl }}/public/css/font-awesome.css">
