--- a/_layouts/page_title.html
+++ b/_layouts/page_title.html
@@ -11,6 +11,6 @@ layout: base_title
       {{ content }}
     </div>
     <hr>
-    {% include JB/comments %}
+    {% include disqus.html %}
   </div>
 </div>
