--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -2,20 +2,20 @@
   <div class="row">
     <div class="col-md-2 col-xs-2 aside1">
       <br>
-      <a class="pjaxlink" href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/public/img/balloon.png" class="img-ronuded avatar" style="border-width:0px; border-color:#000"></a>
+      <a class="pjaxlink" href=""><img src="/public/img/balloon.png" class="img-ronuded avatar" style="border-width:0px; border-color:#000"></a>
       <br><br><br><br>
       <ul class="nav nav-pills nav-stacked">
         {% for category in site.categories %}     <!-- 技术、生活-->
          <li><a href="#{{ category | first }}" data-toggle="tab">{{ category[0] }}</a></li>
         {% endfor %}
         <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  
-        <li><a class="pjaxlink" href="{{ site.baseurl }}/pages/archive.html">{{ site.locals.archive }}</a></li>
-        <li><a class="pjaxlink" href="{{ site.baseurl }}/pages/about/">{{ site.locals.about }}</a></li>
+        <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
+        <li><a class="pjaxlink" href="/pages/about/">{{ site.locals.about }}</a></li>
       </ul>
       <div class="aside1_bottom">
         <table class="table table-condensed">
           <tr>
-            <td><a href="{{ site.baseurl }}/pages/atom.xml" target="_blank"><i class="fa fa-rss fa-lg" style="color:#fff;"></i></a></td>
+            <td><a href="/pages/atom.xml" target="_blank"><i class="fa fa-rss fa-lg" style="color:#fff;"></i></a></td>
             <td><a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope-o fa-lg" style="color:#fff;"></i></a></td>
           </tr>
         </table>
@@ -28,7 +28,7 @@
             <div class="tab-pane" id="{{ category[0] }}">
               <div class="list-group">
                 {% for post in category[1] %}
-                  <a href="{{ site.baseurl }}{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a>
+                  <a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a>
                 {% endfor %}
               </div>
             </div>
@@ -45,7 +45,7 @@
                   </div>
                   <div id="{{ tag[0] }}" class="panel-collapse collapse">
                     {% for post in tag[1] %}
-                      <a  href='{{ site.baseurl }}{{ post.url }}' class="list-group-item pjaxlink">
+                      <a  href='{{ post.url }}' class="list-group-item pjaxlink">
                         {{post.title}}
                       </a>
                     {% endfor %}
