--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
-<meta charset="utf-8">
+<meta charset="utf-8" name="ujianVerification" content="6c1842f45966fbd8b62f7a2576b77594">
 <title>{{ page.title }} | {{ site.title }}</title>
 <meta name="author" content="{{ site.author.name }}">
 {% if page.keywords %}
   <meta name="keywords" content="{{ page.keywords }}">
 {% endif %}
 {% if page.description  %}
-  <meta name="description " content="{{ page.description  }}">
+  <meta name="description " content="{{ page.description }}">
 {% endif %}
 <link rel="shortcut icon" href="/public/img/balloon.png" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
