--- a/_includes/navside.html
+++ b/_includes/navside.html
@@ -5,12 +5,12 @@
       <a class="pjaxlink" href=""><img src="/public/img/balloon.png" class="img-ronuded avatar" style="border-width:0px; border-color:#000"></a>
       <br><br><br><br>
       <ul class="nav nav-pills nav-stacked">
-        {% for category in site.categories %}     <!-- 技术、生活-->
+        {% for category in site.categories %}
          <li><a href="#{{ category | first }}" data-toggle="tab">{{ category[0] }}</a></li>
         {% endfor %}
         <li><a href="#tags" data-toggle="tab">{{ site.locals.tags }}</a></li>  
-        <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
         <li><a class="pjaxlink" href="/pages/about/">{{ site.locals.about }}</a></li>
+        <li><a class="pjaxlink" href="/pages/archive.html">{{ site.locals.archive }}</a></li>
       </ul>
       <div class="aside1_bottom">
         <table class="table table-condensed">
