--- a/_includes/googleanalytics.html
+++ b/_includes/googleanalytics.html
@@ -6,3 +6,4 @@
   ga('create', '{{ site.ga.id }}', '{{ site.ga.url }}');
   ga('send', 'pageview');
 </script>
+<script language="javascript" type="text/javascript" src="http://js.users.51.la/18697003.js"></script>
